Actor Endpoints
